url: http://localhost:8080/?fake=1
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "maestro-hook"
    timeout: 240000
- extendedWaitUntil:
    visible: "diary-fab-main-count-1"
    timeout: 240000
- tapOn:
    id: "maestro-tap-main-fab"
- extendedWaitUntil:
    visible: "diary-fab-actions-3"
    timeout: 30000
- assertVisible: "diary-fab-actions-3"
- tapOn:
    id: "maestro-tap-fab-scan"
- extendedWaitUntil:
    visible: "scan-result-dialog"
    timeout: 60000
- assertVisible: "scan-result-dialog"
